--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <title>Archicture Development Stub: Frontend + BigQuery</title>
+    <title>Architecture Templates: Frontend + BigQuery</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
